# raven

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  memory.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: skill.md
config/: cost_guards.yaml  error_taxonomy.json  metabase_mcp.yaml  model_routing.yaml  openmetadata.yaml  semantic_model.example.yaml  semantic_model.yaml  settings.yaml  table_annotations.yaml  trino_dialect_rules.txt
docs/: accuracy-first-10-10-roadmap.md  ai-handoff.md  build-guide.md  openmetadata-accuracy-requirements.md  training.doc
k8s/: configmap.yaml  deployment.yaml  grafana-dashboard.json  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
preprocessing/: __init__.py  auto_describe.py  build_content_awareness.py  build_glossary.py  build_lsh_index.py  build_table_graph.py  enrich_schema_catalog.py  export_finetuning_data.py  extract_dbt_metadata.py  extract_metabase_questions.py  ingest_documentation.py  load_embeddings.py  refresh_all.py
prompts/: gen_complex.txt  gen_divide_conquer.txt  gen_execution_plan.txt  gen_fewshot.txt  gen_revision.txt  gpt54_codebase_eval.md  ir_keyword_extract.txt  out_chart_detect.txt  out_nl_summary.txt  probe_decompose.txt  probe_generate.txt  router_classify.txt  ss_column_filter.txt  ss_column_prune.txt  ss_table_select.txt  trino_dialect_rules.txt  val_error_taxonomy.txt  val_pairwise_compare.txt
scripts/: assess_data_quality.py  calibrate_confidence.py  create_pgvector_indexes.py  e2e_test.py  metabase_export_queries.sql  validate_test_set.py
tests/: eval_accuracy.py  test_accuracy_path.py  test_basic.py  test_benchmark_gate.py  test_benchmark_runner.py  test_candidate_selector.py  test_confidence_model.py  test_constrained_sql.py  test_document_upload_metadata.py  test_execution_judge.py  test_focus_safety.py  test_grounding.py  test_instructions.py  test_integration.py  test_metabase_query_family_sync.py  test_preprocessing.py  test_provenance_registry.py  test_query_families.py  test_query_plan_validator.py  test_redis_cache.py  test_semantic_contracts.py  test_set.json  test_set_200.json  test_set_business_critical.json  (+6 more)
(+144 files in other folders)
